--- a/views/schedules.handlebars
+++ b/views/schedules.handlebars
@@ -1,25 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Bootstrap-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-    <!--Favicon-->
-    <link rel="icon" type="image/png" sizes="32x32" href="stylesheets/favicon.png">
-    <!--JQuery-->
-    <script src='jquery-3.2.1.min.js'></script>
-    <!--Font Kit-->
-    <link rel="stylesheet" href="https://use.typekit.net/wzc2zuw.css">
-    <title>Slam Dunk</title>
-</head>
-<body>
-
 <!--Navbar-->  
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #1A1A1A;">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="/">
         <img src="images/slamball.png" width="40" height="40" alt="" loading="lazy">
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,17 +9,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="schedules.html">Schedules</a>
+          <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="scores.html">Scores</a>
+          <a class="nav-link" href="/schedules">Schedules</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="games.html">Games</a>
-          </li>
+          <a class="nav-link" href="/scores">Scores</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="news.html">News</a>
         </li>
@@ -58,9 +36,9 @@
     </div>
   </nav>
 <!--Header-->  
-  <div class="hero-image" id="scobanner">
+  <div class="hero-image" id="schebanner">
     <div class="hero-text">
-      <p>Scores</p>
+      <p>Schedules</p>
     </div>
   </div>
 
@@ -145,43 +123,21 @@
   </div>
 </form>
 
-<br>
-
-<!--Table-->
-<table class="table table-striped">
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col" id="tabletexttitle">Date</th>
-      <th scope="col" id="tabletexttitle">Time</th>
-      <th scope="col" id="tabletexttitle">Home</th>
-      <th scope="col" id="tabletexttitle">Away</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
-    <tr>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
-    <tr>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
-  </tbody>
-</table>
-</div>
+{{#each games}}
+   {{!-- <h2>Away: {{dataValues.away}}</h2> --}}
+   {{!-- <h4>Home: {{dataValues.home}}</h4> --}}
+   {{!-- <h6>Date and Time: {{dataValues.dateandtime}}</h6> --}}
+   <div class="card" style="width: 18rem;">
+   <div class="card-body">
+    <h5 class="card-title">Away: {{dataValues.away}}</h5>
+    <h6 class="card-subtitle mb-2 text-muted">Home: {{dataValues.home}}</h6>
+    <p class="card-text">Date and Time: {{dataValues.dateandtime}}</p>
+    </div>
+    </div>
+  {{/each}}
 
 
-    
+    {{{ body }}}
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
