Handlebars IDS for POST

--- a/views/scores.handlebars
+++ b/views/scores.handlebars
@@ -67,6 +67,7 @@
 
 <br>
 <br>
+<!--First Row Score-->
 <div class="container-lg">
     <div class="row">
         <div class="col-4">
@@ -84,7 +85,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="images/nets.png" id="teamimg" class="rounded-0" alt="Sheep">
+                            <img src="images/nets.png" id="teamimg" class="rounded-0" alt="Nets">
                         </td>
                         <td>27</td>
                         <td>29</td>
@@ -94,7 +95,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/lakers.png" id="teamimg" class="rounded-0" alt="Sheep">
+                            <img src="images/lakers.png" id="teamimg" class="rounded-0" alt="Lakers">
                         </td>
                         <td>33</td>
                         <td>25</td>
@@ -105,35 +106,27 @@
                 </tbody>
             </table>
         </div>
+        <!--Comment-->
         <div class="col-4">
             <div class="card">
                 <div class="card-header">Let's Get Social</div>
                 <div class="card-body">
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Name</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                        <input type="email" class="form-control" id="user" placeholder="Name">
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Comment</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+                        <textarea class="form-control" id="comment-box" rows="2"></textarea>
                     </div>
                     <button id="submit-comment" class="btn btn-dark">Send</button>
                 </div>
             </div>
         </div>
+        <!--POST Comment-->
         <div class="col-4 scroll">
             <div class="card">
-                <div class="card-body">
-                    <p>The NBA is closing in on signing off on a second “bubble” in Chicago for the eight teams that
-                        were not invited to play in Orlando, enabling mini-training camps and subsequent games against
-                        other clubs with a target date of September, sources tell ESPN's Jackie MacMullan
-                        The NBA is closing in on signing off on a second “bubble” in Chicago for the eight teams that
-                        were not invited to play in Orlando, enabling mini-training camps and subsequent games against
-                        other clubs with a target date of September, sources tell ESPN's Jackie MacMullan
-                        The NBA is closing in on signing off on a second “bubble” in Chicago for the eight teams that
-                        were not invited to play in Orlando, enabling mini-training camps and subsequent games against
-                        other clubs with a target date of September, sources tell ESPN's Jackie MacMullan
-                    </p>
+                <div class="card-body" id="comment-area">
                 </div>
             </div>
         </div>
@@ -144,7 +137,7 @@
 <br>
 <hr>
 <br>
-
+<!--Second Row Score-->
 <div class="container-lg">
     <div class="row">
         <div class="col-4">
@@ -162,7 +155,7 @@
                 <tbody>
                     <tr>
                         <td>
-                            <img src="images/clippers.png" id="teamimg" class="rounded-0" alt="Sheep">
+                            <img src="images/clippers.png" id="teamimg" class="rounded-0" alt="Clippers">
                         </td>
                         <td>35</td>
                         <td>41</td>
@@ -172,7 +165,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/golden.png" id="teamimg" class="rounded-0" alt="Sheep">
+                            <img src="images/golden.png" id="teamimg" class="rounded-0" alt="Golden">
                         </td>
                         <td>26</td>
                         <td>22</td>
@@ -183,35 +176,26 @@
                 </tbody>
             </table>
         </div>
+        <!--Comment-->
         <div class="col-4">
             <div class="card">
                 <div class="card-header">Let's Get Social</div>
                 <div class="card-body">
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Name</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                        <input type="email" class="form-control" id="user2" placeholder="Name">
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlTextarea1">Comment</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+                        <textarea class="form-control" id="comment-box2" rows="2"></textarea>
                     </div>
-                    <button id="submit-comment" class="btn btn-dark">Send</button>
+                    <button id="submit-comment2" class="btn btn-dark">Send</button>
                 </div>
             </div>
         </div>
         <div class="col-4 scroll">
             <div class="card">
-                <div class="card-body">
-                    <p>The NBA is closing in on signing off on a second “bubble” in Chicago for the eight teams that
-                        were not invited to play in Orlando, enabling mini-training camps and subsequent games against
-                        other clubs with a target date of September, sources tell ESPN's Jackie MacMullan
-                        The NBA is closing in on signing off on a second “bubble” in Chicago for the eight teams that
-                        were not invited to play in Orlando, enabling mini-training camps and subsequent games against
-                        other clubs with a target date of September, sources tell ESPN's Jackie MacMullan
-                        The NBA is closing in on signing off on a second “bubble” in Chicago for the eight teams that
-                        were not invited to play in Orlando, enabling mini-training camps and subsequent games against
-                        other clubs with a target date of September, sources tell ESPN's Jackie MacMullan
-                    </p>
+                <div class="card-body" id="comment-area2">
                 </div>
             </div>
         </div>
@@ -221,7 +205,7 @@
 
 <br>
 <br>
-
+<!--Footer-->
 <footer id="sticky-footer" class="py-3">
     <div class="container text-center">
         <small>Copyright &copy; Slam Dunk 2020</small>
