--- a/views/schedules.handlebars
+++ b/views/schedules.handlebars
@@ -123,19 +123,17 @@
   </div>
 </form>
 
+<div class="container-fluid">
 {{#each games}}
-   {{!-- <h2>Away: {{dataValues.away}}</h2> --}}
-   {{!-- <h4>Home: {{dataValues.home}}</h4> --}}
-   {{!-- <h6>Date and Time: {{dataValues.dateandtime}}</h6> --}}
    <div class="card" style="width: 18rem;">
    <div class="card-body">
     <h5 class="card-title">Away: {{dataValues.away}}</h5>
-    <h6 class="card-subtitle mb-2 text-muted">Home: {{dataValues.home}}</h6>
+    <h5 class="card-title">Home: {{dataValues.home}}</h5>
     <p class="card-text">Date and Time: {{dataValues.dateandtime}}</p>
     </div>
     </div>
   {{/each}}
-
+</div>
 
     {{{ body }}}
 
