Change to schedule cards fonts

--- a/views/schedules.handlebars
+++ b/views/schedules.handlebars
@@ -127,9 +127,9 @@
 {{#each games}}
    <div class="card" style="width: 18rem;">
    <div class="card-body">
-    <h5 class="card-title">Away: {{dataValues.away}}</h5>
-    <h5 class="card-title">Home: {{dataValues.home}}</h5>
-    <p class="card-text">Date and Time: {{dataValues.dateandtime}}</p>
+    <h5 class="card-title" id="awaytxt">Away: {{dataValues.away}}</h5>
+    <h5 class="card-title" id="hometxt">Home: {{dataValues.home}}</h5>
+    <p class="card-text" id="schetxt">Date and Time: {{dataValues.dateandtime}}</p>
     </div>
     </div>
   {{/each}}
