--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -220,3 +220,27 @@ text-shadow: 3px 3px #1F467F;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   }
+
+  #awaytxt {
+    font-family: prohibition, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
+    color: #3074E3;
+  }
+
+  #hometxt {
+    font-family: prohibition, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
+    color: #1A1A1A;
+  }
+
+  #schetxt {
+    color: #1A1A1A;
+    font-family: poppins, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 15px;
+  }
