--- a/views/scores.handlebars
+++ b/views/scores.handlebars
@@ -10,8 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
     <!--Favicon-->
     <link rel="icon" type="image/png" sizes="32x32" href="stylesheets/favicon.png">
-    <!--JQuery-->
-    <script src='jquery-3.2.1.min.js'></script>
+    
     <!--Font Kit-->
     <link rel="stylesheet" href="https://use.typekit.net/wzc2zuw.css">
     <title>Slam Dunk</title>
@@ -217,9 +216,10 @@
 
 
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
     crossorigin="anonymous"></script>
